[package]
name = "falkordb"
version = "0.9.0"
edition = "2021"
description = "A FalkorDB Rust client"
homepage = "https://www.falkordb.com/"
readme = "README.md"
repository = "https://github.com/FalkorDB/falkordb-rs"
license = "MIT"
categories = ["database"]
keywords = ["database", "graph-database", "database-driver", "falkordb"]

[package.metadata.docs.rs]
all-features = true

[lib]

[dependencies]
backon = { version = "1.6", default-features = false, features = ["std", "std-blocking-sleep"] }
futures-core = { version = "0.3", default-features = false, optional = true }
metrics = { version = "0.24", optional = true }
parking_lot = { version = "0.12.5", default-features = false }
redis = { version = "1.2.2", default-features = false, features = ["sentinel"] }
regex = { version = "1.12.3", default-features = false, features = ["std", "perf", "unicode-bool", "unicode-perl"] }
serde = { version = "1.0", default-features = false, features = ["std", "derive"], optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }
strum = { version = "0.28.0", default-features = false, features = ["std", "derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = ["macros", "sync", "rt-multi-thread", "time"], optional = true }
tracing = { version = "0.1.44", default-features = false, features = ["std", "attributes"], optional = true }
ureq = { version = "2.12", default-features = false, features = ["tls"], optional = true }
which = { version = "8.0", optional = true }

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.5", features = ["async_tokio"] }
futures = "0.3"
proptest = "1"
serde_json = "1"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std", "fmt"] }
metrics-util = { version = "0.20", default-features = false, features = ["debugging"] }

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

[[bench]]
name = "async_strategies"
harness = false
required-features = ["tokio"]

[[bench]]
name = "resource_usage"
harness = false
required-features = ["tokio"]

[features]
default = []

native-tls = ["redis/tls-native-tls"]
rustls = ["redis/tls-rustls"]

tokio = ["dep:tokio", "dep:futures-core", "redis/tokio-comp", "redis/connection-manager", "backon/tokio-sleep"]
tokio-native-tls = ["tokio", "redis/tokio-native-tls-comp"]
tokio-rustls = ["tokio", "redis/tokio-rustls-comp"]

tracing = ["dep:tracing"]

# Optional `metrics` integration: emit counters/histograms (queries, durations, errors) with
# bounded labels via the `metrics` facade, so the application can install any exporter.
metrics = ["dep:metrics"]

embedded = ["dep:which", "dep:ureq", "dep:sha2"]

# Optional `serde` integration: derive `serde::Deserialize` on your own types and
# map query results straight into them via [`FalkorValue::deserialize_into`].
serde = ["dep:serde"]

[[example]]
name = "basic_usage"

[[example]]
name = "batch"

[[example]]
name = "async_api"
required-features = ["tokio"]

[[example]]
name = "async_stream"
required-features = ["tokio"]

[[example]]
name = "multiplexed_async"
required-features = ["tokio"]

[[example]]
name = "embedded_usage"
required-features = ["embedded"]

[[example]]
name = "typed_mapping"
required-features = ["serde"]

[[example]]
name = "typed_params"

[[example]]
name = "rows"

[[example]]
name = "observability"
required-features = ["tracing"]

[[example]]
name = "readonly_replica"

[[example]]
name = "retry"

[[example]]
name = "udf_usage"

[[example]]
name = "waiting_ops"

[[example]]
name = "tls"
required-features = ["rustls"]

[[example]]
name = "temporal"

[[example]]
name = "vector_index"
